--- a/package.json
+++ b/package.json
@@ -41,7 +41,14 @@
     "siwe": "^1.1.6",
     "use-sound": "^4.0.1",
     "usehooks-ts": "^2.9.1",
-    "wagmi": "^0.10.0"
+    "wagmi": "^0.10.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
+    "@openzeppelin/contracts": "^4.8",
+    "@openzeppelin/contracts-upgradeable": "^4.8.0",
+    "@prb/math": "^3.1.0",
+    "cli-color": "^2.0.3",
+    "dotenv": "^16.0.1",
+    "web3.storage": "^4.4.0"
   },
   "devDependencies": {
     "@tsconfig/next": "^1.0.4",
@@ -55,6 +62,12 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "@nomiclabs/hardhat-etherscan": "^3.1.3",
+    "@openzeppelin/hardhat-upgrades": "^1.22.0",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.12.0"
   }
 }
