--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "another-star",
-  "version": "0.1.0",
+  "name": "continua-minter",
+  "version": "1.0.0",
   "license": "GPL-3.0",
   "scripts": {
     "dev": "next dev",
