--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -25,6 +25,7 @@
     "@prb/math": "^3.1.0",
     "cli-color": "^2.0.3",
     "dotenv": "^16.0.1",
+    "hardhat-gas-reporter": "^1.0.9",
     "web3.storage": "^4.4.0"
   }
 }
